#305 Avoid "WARNING: A Java agent has been loaded dynamically" when running UTs